--- a/package.json
+++ b/package.json
@@ -2,24 +2,47 @@
   "name": "semantic-release-maven",
   "version": "0.0.1",
   "description": "semantic-release plugin to publish a maven package.",
-  "main": "index.js",
+  "keywords": [
+    "semantic-release"
+  ],
+  "repository": "github:akijoey/semantic-release-maven",
+  "homepage": "https://github.com/akijoey/semantic-release-maven#readme",
+  "bugs": "https://github.com/akijoey/semantic-release-maven/issues",
+  "author": "AkiJoey <akijoey@akijoey.com> (https://akijoey.com)",
   "license": "MIT",
+  "main": "index.js",
+  "files": [
+    "index.js",
+    "lib/"
+  ],
   "scripts": {
-    "semantic-release": "semantic-release"
+    "lint": "dev-scripts lint",
+    "test": "dev-scripts test",
+    "format": "dev-scripts format",
+    "prepare": "dev-scripts hook"
   },
   "dependencies": {
-    "@semantic-release/error": "^2.2.0",
-    "aggregate-error": "^1.0.0",
-    "execa": "^0.10.0",
-    "fs-extra": "^5.0.0",
-    "got": "^8.0.1",
-    "semver": "^5.5.0",
-    "xml2js-es6-promise": "^1.1.1"
-  },
-  "devDependencies": {
-    "semantic-release": "^17.3.0"
+    "aggregate-error": "^4.0.0",
+    "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
+    "xml2js": "^0.4.23"
   },
   "peerDependencies": {
-    "semantic-release": "^17.3.0"
+    "semantic-release": "^17.4.4"
+  },
+  "devDependencies": {
+    "@akijoey/dev-scripts": "latest"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": "@akijoey"
+  },
+  "prettier": "@akijoey/prettier-config",
+  "commitlint": {
+    "extends": "@akijoey/commitlint-config"
+  },
+  "lint-staged": {
+    "*.js": "npm run lint",
+    "*.{js,json,yml}": "npm run format"
   }
 }
