--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "main": "index.js",
   "files": [
     "index.js",
-    "lib/"
+    "lib/",
+    "settings.xml"
   ],
   "scripts": {
     "lint": "dev-scripts lint",
