--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
-        with:
-          node-version: lts/*
       - run: yarn --frozen-lockfile
       - run: yarn test
-      - run: npx semantic-release
+      - run: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
