--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "xml2js": "^0.4.23"
   },
   "peerDependencies": {
-    "semantic-release": "^19.0.5"
+    "semantic-release": ">=18.0.0"
   },
   "devDependencies": {
     "@akijoey/devkit": "latest"
